assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');

/* Variables */
:root {
    --background-colour: 0, 56, 68;
    --content-background-colour: 192, 160, 26;
    --header-text-colour: 255, 235, 198;
    --content-text-colour: 255, 255, 255;
    --gamebutton-background-colour: 255, 255, 255;
    --gamebutton-colour: 96, 108, 47;
    --player-highlight-colour: 126, 242, 230;
    --player-score-text-colour: 166, 61, 158;
    --computer-highlight-colour: 166, 61, 158;
    --computer-score-text-colour: 126, 242, 230;
    --transparent: 0, 0, 0, 0;
    --picked-fadeout-time: 400ms;
    --heading-font: "RocknRoll One", sans-serif;
}

/* Clear spacing and border values for all objects */
* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    background-color: rgb(var(--background-colour), 1);
}

header {
    color: rgb(var(--header-text-colour), 1);
    font-size: 4rem;
    font-family: var(--heading-font);
    float: left;
    text-transform: capitalize;
}

.game-area {
    width: 750px;
    height: 750px;

    background-color: rgb(var(--content-background-colour), 1);

    border-radius: 2em;

    margin: 80px auto 0 auto;
    position: relative;
}

.game-button  {
    font-size: 8rem;
    color: rgb(var(--gamebutton-colour), 1);
    background-color: rgb(var(--gamebutton-background-colour), 1);
    
    margin-left: -6rem;
    margin-top: -6rem;
    
    width: 12rem;
    height: 12rem;
    
    border-radius: 50%;
    text-align: center;

    position: absolute;
    left: 50%;
    top: 50%;
}

.player-picked {
    border-style: solid;
    border-width: 0.8rem;
    border-color: rgb(var(--player-highlight-colour), 1);
}

.player-picked-fadeout {
    border-color: rgb(var(--player-highlight-colour), 0);
    transition: var(--picked-fadeout-time) linear;
}

.computer-picked {
    outline-style: solid;
    outline-width: 0.8rem;
    outline-color: rgb(var(--computer-highlight-colour), 1);
}

.computer-picked-fadeout {
    outline-color: rgb(var(--computer-highlight-colour), 0);
    transition: var(--picked-fadeout-time) linear;
}

.score-area {
    width: 750px;
    height: 100px;
    background-color: rgb(var(--content-background-colour), 1);

    border-radius: 2em;
    margin: 10px auto;
}

.score-bar {
    height: 100%;
    box-sizing: border-box;
    font-family: var(--heading-font);
}

#player-score-bar {
    float: left;
    width: 50%;    
    border-style: solid;
    border-width: 0.8rem;
    border-color: rgb(var(--player-highlight-colour), 1);
    background-color: rgb(var(--player-highlight-colour), 1);
    border-radius: 2em 0 0 2em;
    text-align: right;
    color: rgb(var(--player-score-text-colour), 1);
    
}

.score-text {
    font-size: 3rem;
}

#computer-score-bar {
    float: left;
    width: 50%;    
    border-style: solid;
    border-width: 0.8rem;
    border-color: rgb(var(--computer-highlight-colour), 1);
    background-color: rgb(var(--computer-highlight-colour), 1);
    border-radius: 0 2em 2em 0;
    color: rgb(var(--computer-score-text-colour), 1);
}

#result-text::first-letter{
    text-transform: capitalize;
}

#result-text {
    font-family: var(--heading-font);
    font-size: 2rem;
    color: rgb(var(--background-colour), 1);
    text-align: center;
    top: 50%;
    position: relative;
    margin-top: -1rem;
}

